// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfiguratorPanel component renders collapsed 1`] = `
<div>
  <div
    class="ConfiguratorPanel-root-16"
  >
    <div
      class="MuiPaper-root MuiAccordion-root ConfiguratorPanel-panel-17 MuiPaper-elevation0"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root ConfiguratorPanel-summary-20"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content"
        >
          <h3
            class="MuiTypography-root ConfiguratorPanel-title-19 Typography-root-23 MuiTypography-h3 MuiTypography-colorInherit"
            data-testid="typography"
          >
            Question One
          </h3>
        </div>
        <div
          aria-disabled="false"
          aria-hidden="true"
          class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </div>
      </div>
      <div
        class="MuiCollapse-root MuiCollapse-hidden"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              role="region"
            >
              <div
                class="MuiAccordionDetails-root ConfiguratorPanel-details-21"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfiguratorPanel component renders correctly 1`] = `
<div>
  <div
    class="ConfiguratorPanel-root-1"
  >
    <div
      class="MuiPaper-root MuiAccordion-root ConfiguratorPanel-panel-2 Mui-expanded MuiPaper-elevation0"
    >
      <div
        aria-disabled="false"
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root ConfiguratorPanel-summary-5 Mui-expanded"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content Mui-expanded"
        >
          <h3
            class="MuiTypography-root ConfiguratorPanel-title-4 Typography-root-8 MuiTypography-h3 MuiTypography-colorInherit"
            data-testid="typography"
          >
            Question One
          </h3>
        </div>
        <div
          aria-disabled="false"
          aria-hidden="true"
          class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded MuiIconButton-edgeEnd"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </div>
      </div>
      <div
        class="MuiCollapse-root MuiCollapse-entered"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              role="region"
            >
              <div
                class="MuiAccordionDetails-root ConfiguratorPanel-details-6"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfiguratorPanel component renders disabled 1`] = `
<div>
  <div
    class="ConfiguratorPanel-root-61"
  >
    <div
      class="MuiPaper-root MuiAccordion-root ConfiguratorPanel-panel-62 Mui-expanded Mui-disabled MuiPaper-elevation0"
    >
      <div
        aria-disabled="true"
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root ConfiguratorPanel-summary-65 Mui-disabled Mui-expanded Mui-disabled"
        role="button"
        tabindex="-1"
      >
        <div
          class="MuiAccordionSummary-content Mui-expanded"
        >
          <h3
            class="MuiTypography-root ConfiguratorPanel-title-64 Typography-root-68 MuiTypography-h3 MuiTypography-colorInherit"
            data-testid="typography"
          >
            Question One
          </h3>
        </div>
        <div
          aria-disabled="false"
          aria-hidden="true"
          class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded MuiIconButton-edgeEnd"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </div>
      </div>
      <div
        class="MuiCollapse-root MuiCollapse-entered"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              role="region"
            >
              <div
                class="MuiAccordionDetails-root ConfiguratorPanel-details-66"
              >
                <div
                  class="ConfiguratorPanel-content-67"
                >
                  Expanded with child content
                </div>
                <button>
                  Option 1
                </button>
                <button>
                  Option 2
                </button>
                <button>
                  Option 3
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfiguratorPanel component renders expanded with child content 1`] = `
<div>
  <div
    class="ConfiguratorPanel-root-31"
  >
    <div
      class="MuiPaper-root MuiAccordion-root ConfiguratorPanel-panel-32 Mui-expanded MuiPaper-elevation0"
    >
      <div
        aria-disabled="false"
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root ConfiguratorPanel-summary-35 Mui-expanded"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content Mui-expanded"
        >
          <h3
            class="MuiTypography-root ConfiguratorPanel-title-34 Typography-root-38 MuiTypography-h3 MuiTypography-colorInherit"
            data-testid="typography"
          >
            Question One
          </h3>
        </div>
        <div
          aria-disabled="false"
          aria-hidden="true"
          class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded MuiIconButton-edgeEnd"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </div>
      </div>
      <div
        class="MuiCollapse-root MuiCollapse-entered"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              role="region"
            >
              <div
                class="MuiAccordionDetails-root ConfiguratorPanel-details-36"
              >
                <div
                  class="ConfiguratorPanel-content-37"
                >
                  Expanded with child content
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfiguratorPanel component renders expanded with child content and options 1`] = `
<div>
  <div
    class="ConfiguratorPanel-root-46"
  >
    <div
      class="MuiPaper-root MuiAccordion-root ConfiguratorPanel-panel-47 Mui-expanded MuiPaper-elevation0"
    >
      <div
        aria-disabled="false"
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root ConfiguratorPanel-summary-50 Mui-expanded"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content Mui-expanded"
        >
          <h3
            class="MuiTypography-root ConfiguratorPanel-title-49 Typography-root-53 MuiTypography-h3 MuiTypography-colorInherit"
            data-testid="typography"
          >
            Question One
          </h3>
        </div>
        <div
          aria-disabled="false"
          aria-hidden="true"
          class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded MuiIconButton-edgeEnd"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </div>
      </div>
      <div
        class="MuiCollapse-root MuiCollapse-entered"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              role="region"
            >
              <div
                class="MuiAccordionDetails-root ConfiguratorPanel-details-51"
              >
                <div
                  class="ConfiguratorPanel-content-52"
                >
                  Expanded with child content
                </div>
                <button>
                  Option 1
                </button>
                <button>
                  Option 2
                </button>
                <button>
                  Option 3
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfiguratorPanel component renders with title with selected option title 1`] = `
<div>
  <div
    class="ConfiguratorPanel-root-76"
  >
    <div
      class="MuiPaper-root MuiAccordion-root ConfiguratorPanel-panel-77 Mui-expanded Mui-disabled MuiPaper-elevation0"
    >
      <div
        aria-disabled="true"
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root ConfiguratorPanel-summary-80 Mui-disabled Mui-expanded Mui-disabled"
        role="button"
        tabindex="-1"
      >
        <div
          class="MuiAccordionSummary-content Mui-expanded"
        >
          <h3
            class="MuiTypography-root ConfiguratorPanel-title-79 Typography-root-83 MuiTypography-h3 MuiTypography-colorInherit"
            data-testid="typography"
          >
            Question one: 
            <span
              class="ConfiguratorPanel-selectedTitle-78"
            >
              Answer One
            </span>
          </h3>
        </div>
        <div
          aria-disabled="false"
          aria-hidden="true"
          class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded MuiIconButton-edgeEnd"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </div>
      </div>
      <div
        class="MuiCollapse-root MuiCollapse-entered"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              role="region"
            >
              <div
                class="MuiAccordionDetails-root ConfiguratorPanel-details-81"
              >
                <div
                  class="ConfiguratorPanel-content-82"
                >
                  Expanded with child content
                </div>
                <button>
                  Option 1
                </button>
                <button>
                  Option 2
                </button>
                <button>
                  Option 3
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
